<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Madani</string>
    <string name="selamat_datang">Selamat Datang,</string>
    <string name="jalur_cepat">Deteksi Jalan</string>
    <string name="lapor">Lapor</string>
    <string name="bangunan_rusak">Bangunan\nRusak</string>
    <string name="info_detail">Info\nDetail</string>
    <string name="no">no</string>
    <string name="at">at</string>
    <string name="beranda">Beranda</string>
    <string name="kondisi_lapangan">Kondisi Lapangan</string>
    <string name="akun">Akun</string>
    <string name="pilih_instansi">Pilih Instansi</string>
    <string name="dummy_url">https://media.suara.com/pictures/970x544/2019/12/10/39854-banjir.jpg</string>
    <string name="dummy_content">But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man who chooses to enjoy a pleasure that has no annoying consequences, or one who avoids a pain that produces no resultant pleasure? On the other hand, we denounce with righteous indignation and dislike men who are so beguiled and demoralized by the charms of pleasure of the moment, so blinded by desire, that they cannot foresee the pain and trouble that are bound to ensue; and equal blame belongs to those who fail in their duty through weakness of will, which is the same as saying through shrinking from toil and pain.
But I must explain to you how all this mistaken idea of denouncing pleasure and praising pain was born and I will give you a complete account of the system, and expound the actual teachings of the great explorer of the truth, the master-builder of human happiness. No one rejects, dislikes, or avoids pleasure itself, because it is pleasure, but because those who do not know how to pursue pleasure rationally encounter consequences that are extremely painful. Nor again is there anyone who loves or pursues or desires to obtain pain of itself, because it is pain, but because occasionally circumstances occur in which toil and pain can procure him some great pleasure. To take a trivial example, which of us ever undertakes laborious physical exercise, except to obtain some advantage from it? But who has any right to find fault with a man</string>
    <string name="dummy_date">13-08-2021</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="edit_password">Password</string>
    <string name="hal_profile">Profil</string>
    <string name="hal_lap">Kondisi Lapangan</string>
    <string name="hal_dash">Dashboard</string>
    <string-array name="content">
        <item>@string/dummy_content</item>
        <item>@string/dummy_content</item>
        <item>@string/dummy_content</item>
        <item>@string/dummy_content</item>
    </string-array>
    <string-array name="id_notif">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="title_notif">
        <item>@string/dummy_title</item>
        <item>@string/dummy_title</item>
        <item>@string/dummy_title</item>
        <item>@string/dummy_title</item>
    </string-array>
    <string-array name="location_notif">
        <item>@string/dummy_location</item>
        <item>@string/dummy_location</item>
        <item>@string/dummy_location</item>
        <item>@string/dummy_location</item>
    </string-array>
    <string-array name="date_notif">
        <item>@string/dummy_date</item>
        <item>@string/dummy_date</item>
        <item>@string/dummy_date</item>
        <item>@string/dummy_date</item>
    </string-array>
    <string-array name="URL_notif">
        <item>https://media.suara.com/pictures/970x544/2019/12/10/39854-banjir.jpg</item>
        <item>https://cdn1-production-images-kly.akamaized.net/7WTqApTl9qwbIAcG1yAkYMj_TPw=/640x360/smart/filters:quality(75):strip_icc():format(jpeg)/kly-media-production/medias/3244992/original/091837500_1600746851-20200922-SAR-Banjir-Sukabumi-4.jpg</item>
        <item>https://media.suara.com/pictures/970x544/2019/12/10/39854-banjir.jpg</item>
        <item>https://media.suara.com/pictures/970x544/2019/12/10/39854-banjir.jpg</item>
    </string-array>
    <string-array name="data_title">
        <item>@string/bangunan_rusak</item>
        <item>@string/jalur_cepat</item>
        <item>@string/lapor</item>
        

    </string-array>
    <string-array name="instansi_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_posko">20</string>
    <string name="dummy_relawan">150</string>
    <string name="relawan">Relawan</string>
    <string name="posko_terpadu">Posko terpadu</string>
    <string name="masuk_untuk_melanjutkan">Masuk untuk Melanjutkan</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="masuk">Masuk</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="buat_akun">Buat Akun</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="nama_lengkap">Nama Lengkap</string>
    <string name="no_hp">No Hp</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="upload_foto">Upload Foto</string>
    <string name="selesai">Selesai</string>
    <string name="dummy_terakhir_pusat">Terakhir di update tanggal 20 Mei 2021</string>
    <string name="dummy_location">Lokasi :Nusa Tenggara</string>
    <string name="dummy_title">Bencana alam adalah bencana yang diakibatkan oleh peristiwa</string>
    <string name="daerah_utara">Daerah Utara</string>
    <string name="daerah_selatan">Daerah Selatan</string>
    <string name="daerah_timur">Daerah Timur</string>
    <string name="daerah_barat">Daerah Barat</string>
    <string name="legenda">Legenda</string>
    <string name="ket1">Keterangan 1</string>
    <string name="kerusakan_parah">Kerusakan Parah</string>
    <string name="jalur_yang_dapat_dilalui">Jalur Yang Dapat Dilalui</string>
    <string name="daftar_kelurahan">Daftar Kelurahan</string>
    <string name="gambar_asli">Gambar Asli</string>
    <string name="gambar_klasifikasi">Gambar Klasifikasi</string>
    <string name="title_activity_notif_detail">ScrollingActivity</string>
</resources>