<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/m_24"
    tools:context=".login.LoginActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageButton
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/m_16"
            android:background="@drawable/bg_btn"
            android:foreground="?android:attr/selectableItemBackground"
            app:layout_constraintTop_toBottomOf="@+id/spinner_instansi" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/selanjutnya"
            android:textColor="@color/white"
            android:textSize="@dimen/m_16"
            app:layout_constraintBottom_toBottomOf="@+id/btn_submit"
            app:layout_constraintEnd_toEndOf="@+id/btn_submit"
            app:layout_constraintStart_toStartOf="@+id/btn_submit"
            app:layout_constraintTop_toTopOf="@+id/btn_submit" />

        <Spinner
            android:id="@+id/spinner_instansi"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:layout_marginTop="@dimen/m_16"
            android:background="@drawable/bg_edt"
            android:padding="@dimen/m_16"
            android:spinnerMode="dialog"
            android:prompt="@string/pilih_instansi"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_email"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edt_email"
            android:layout_width="match_parent"
            android:layout_height="65dp"
            android:background="@drawable/bg_edt"
            android:hint="@string/no_hp"
            android:inputType="phone"
            android:padding="@dimen/m_16"
            android:layout_marginTop="@dimen/m_16"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>