<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey_light2"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/m_16">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_notif"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/m_8"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_terakhir_update"
            app:layout_constraintVertical_bias="0.0"
            tools:listitem="@layout/item_notif" />

        <TextView
            android:id="@+id/tv_terakhir_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text=""
            android:fontFamily="@font/sfpro_reguler"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_pusat" />
        <TextView
            android:id="@+id/tv_pusat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableRight="@drawable/ic_loud_speaker"
            android:text="Notif Pusat"
            android:paddingRight="@dimen/m_16"
            android:layout_marginTop="@dimen/m_16"
            android:textSize="@dimen/f_16"
            android:fontFamily="@font/sfpro_bold"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_ket" />

        <ImageView
            android:id="@+id/bg_ket"
            android:layout_width="match_parent"
            android:layout_height="94dp"
            android:layout_marginTop="12dp"
            android:src="@drawable/bg_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rv_menu" />

        <TextView
            android:id="@+id/tv_posko"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/dummy_posko"
            android:textColor="@color/black"
            android:textSize="@dimen/f_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bg_ket"
            app:layout_constraintHorizontal_bias="0.252"
            app:layout_constraintStart_toStartOf="@+id/bg_ket"
            app:layout_constraintTop_toTopOf="@+id/bg_ket"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/posko_terpadu"
            app:layout_constraintEnd_toEndOf="@+id/tv_posko"
            app:layout_constraintStart_toStartOf="@+id/tv_posko"
            app:layout_constraintTop_toBottomOf="@+id/tv_posko" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/relawan"
            app:layout_constraintEnd_toEndOf="@+id/tv_relawan"
            app:layout_constraintStart_toStartOf="@+id/tv_relawan"
            app:layout_constraintTop_toBottomOf="@+id/tv_relawan" />

        <TextView
            android:id="@+id/tv_relawan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/dummy_relawan"
            android:textColor="@color/black"
            android:textSize="@dimen/f_24"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/bg_ket"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintStart_toEndOf="@+id/tv_posko"
            app:layout_constraintTop_toTopOf="@+id/tv_posko"
            app:layout_constraintVertical_bias="0.0" />

        <TextView
            android:id="@+id/welcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sfpro_bold"
            android:text="@string/selamat_datang"
            android:textColor="@color/black"
            android:textSize="@dimen/f_16"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.github.ybq.android.spinkit.SpinKitView
            android:id="@+id/progress_bar"
            style="@style/SpinKitView.CubeGrid"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="visible"
            app:SpinKit_Color="@color/red_dark"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/rv_notif" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_menu"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:layout_marginTop="@dimen/m_16"
            android:background="@drawable/bg_btn"
            android:padding="@dimen/m_16"
            android:layout_gravity="center"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome"
            tools:listitem="@layout/item_menu" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>